# refrag

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/: run_benchmarks.py
benchmarks/results/: benchmark_results.md
docs/: api-reference.md  benchmarking.md  how-it-works.md  index.md  installation.md  quickstart.md
examples/: basic_usage.py  compare_with_vanilla_rag.py
refrag/: __init__.py
refrag/core/: __init__.py  compressor.py  decoder.py  embedder.py  policy.py  reranker.py  retriever.py
refrag/utils/: __init__.py  chunking.py  metrics.py
tests/: test_embedder.py  test_integration.py  test_retriever.py
